cabal-version:      2.4
name:               Learn-Haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             JamesTadleyGreen
maintainer:         jamestadleygreen@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md
    CHANGELOG.md

library
  hs-source-dirs:      library
  exposed-modules:     
    Lists
    Lists_Continued
    Lists_Again
    Arithmetic

  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.12.0.0 && < 5, random >= 1.2.1, ghc >= 9.0.1
  default-language:    Haskell2010

executable Learn-Haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    Learn-Haskell, base ^>=4.15.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -O2
      -threaded
      -fprof-auto
      -prof
      "-with-rtsopts=-N -p -s -h -i0.1"
